syntax = "proto3";

package baluster.v1;

option go_package = "github.com/brianfromlife/baluster/internal/gen;balusterv1";

// ValidateAccessRequest validates a service key for a specific application
message ValidateAccessRequest {
  string token = 1;            // the service key token value
  string application_name = 2; // the name of the application to check access for
  string organization_id = 3;  // the organization ID (also required in x-org-id header for REST)
}

// ValidateAccessResponse returns whether the token has access and what permissions it has
message ValidateAccessResponse {
  bool valid = 1;                      // whether the token is valid and has access to the application
  repeated string permissions = 2;     // the permissions the token has for this application
}

service AccessService {
  // ValidateAccess checks if a service key has access to a specific application
  // and returns the permissions it has for that application
  rpc ValidateAccess(ValidateAccessRequest) returns (ValidateAccessResponse);
}
